写点配方，降低渲染cpu，gpu压力